
= Version SNAPSHOT

== Issues

* [OC-876] User Service : Implement group in JWT Token Option
* [OC-402] As an Operator I want the archive screen to display an explicit message if no cards are found that match my filters
* [OC-868] As an admin I would like to be able to hide the time filtrer : https://opfab.github.io/documentation/current/deployment/#_web_ui

== Bugs
* [OC-772] Bug on archives screen: clear results when exiting archive page.
* [OC-898] In implicit mode, first name and last name are not displayed
* [OC-775] Cards details remain displayed when selecting another criteria that doesn't return any result

== Tasks
* [OC-836] Remove netflix stack (eureka registry server) and config server for users microservice
* [OC-838] Remove netflix stack (eureka registry server) and config server for cards-publication microservice
* [OC-892] Add in documentation that it is not possible to use dot in json field names
* [OC-845] Implement Git flow as our contribution and release workflow
+
_We have transitioned from a GitHub flow to a Git flow. See the documentation to see how it impacted our
link:./single_page_doc.html#CICD[CICD pipeline]
and how it translate into our link:./single_page_doc.html#_contribution_workflow[contribution workflow]
(submitting a pull request etc.)._
+
[IMPORTANT]
====
_Now, the current state of developments is pushed daily to Docker Hub with the tag `SNAPSHOT`
(rather than `snapshot` as before)._
====

* [OC-838] Remove netflix stack (eureka registry server) and config server for cards-consultation microservice
* [OC-836] Remove netflix stack (eureka registry server) and config server for thirds microservice
* [OC-888] Fix SonarCloud Frontend issues
* [OC-692] Fix SonarCloud Backend issues
* [OC-891] Removed mainRecipient
* [OC-899] Deploy and dev-env docker-compose should use SNAPSHOT version on develop branch
* [OC-897] added operation delete for the resource thirds
+